#1440 Fix the spacing on the Species page

--- a/assets/less/a2-components/audiodata.less
+++ b/assets/less/a2-components/audiodata.less
@@ -194,13 +194,6 @@
         z-index:10;
     }
 
-    .roi-btn-tr {
-        position:absolute;
-        top:5px;
-        right:7px;
-        z-index:10;
-    }
-
     .roi-img {
         width:125px;
         height:125px;
