--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -590,12 +590,20 @@ textarea.fixed-width {
     cursor: pointer;
 }
 
-.width-45 {
-  width: 45%;
+.width-35 {
+  width: 35%;
+}
+
+.width-20 {
+  width: 20%;
 }
 
 .width-15 {
   width: 15%;
+}
+
+.width-18 {
+  width: 18%;
 }
 
 .width-25 {
@@ -685,10 +693,9 @@ textarea.fixed-width {
 }
 
 .row-disabled {
-  cursor: not-allowed;
+  cursor: not-allowed !important;
   background-color: transparent;
   opacity: 0.5;
-  pointer-events: none;
 }
 
 .muted-layer {
